build/log/idf_py_stdout_output_19848
[1/10] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\Users\santy\esp\cultivo_smg\build\bootloader\esp-idf\esptool_py && C:\espressif\.espressif\python_env\idf5.4_py3.11_env\Scripts\python.exe C:/Users/santy/esp/v5.4.1/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Users/santy/esp/cultivo_smg/build/bootloader/bootloader.bin"
Bootloader binary size 0x6580 bytes. 0xa80 bytes (9%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main_cultivo.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main_cultivo.c.obj 
ccache C:\espressif\.espressif\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.4.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/santy/esp/cultivo_smg/build/config -IC:/Users/santy/esp/v5.4.1/esp-idf/components/newlib/platform_include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/freertos/config/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/freertos/config/include/freertos -IC:/Users/santy/esp/v5.4.1/esp-idf/components/freertos/config/xtensa/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Users/santy/esp/v5.4.1/esp-idf/components/freertos/esp_additions/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/esp_hw_support/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/esp_hw_support/include/soc -IC:/Users/santy/esp/v5.4.1/esp-idf/components/esp_hw_support/include/soc/esp32 -IC:/Users/santy/esp/v5.4.1/esp-idf/components/esp_hw_support/dma/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/esp_hw_support/ldo/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/esp_hw_support/debug_probe/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/esp_hw_support/port/esp32/. -IC:/Users/santy/esp/v5.4.1/esp-idf/components/esp_hw_support/port/esp32/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/heap/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/heap/tlsf -IC:/Users/santy/esp/v5.4.1/esp-idf/components/log/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/soc/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/soc/esp32 -IC:/Users/santy/esp/v5.4.1/esp-idf/components/soc/esp32/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/soc/esp32/register -IC:/Users/santy/esp/v5.4.1/esp-idf/components/hal/platform_port/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/hal/esp32/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/hal/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/esp_rom/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/esp_rom/esp32/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/esp_rom/esp32/include/esp32 -IC:/Users/santy/esp/v5.4.1/esp-idf/components/esp_rom/esp32 -IC:/Users/santy/esp/v5.4.1/esp-idf/components/esp_common/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/esp_system/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/esp_system/port/soc -IC:/Users/santy/esp/v5.4.1/esp-idf/components/esp_system/port/include/private -IC:/Users/santy/esp/v5.4.1/esp-idf/components/xtensa/esp32/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/xtensa/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/xtensa/deprecated_include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/lwip/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/lwip/include/apps -IC:/Users/santy/esp/v5.4.1/esp-idf/components/lwip/include/apps/sntp -IC:/Users/santy/esp/v5.4.1/esp-idf/components/lwip/lwip/src/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/lwip/port/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/lwip/port/freertos/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/santy/esp/v5.4.1/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/Users/santy/esp/v5.4.1/esp-idf/components/esp_driver_gpio/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/spi_flash/include -IC:/Users/santy/esp/v5.4.1/esp-idf/components/esp_driver_i2c/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/santy/esp/cultivo_smg=. -fmacro-prefix-map=C:/Users/santy/esp/v5.4.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main_cultivo.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main_cultivo.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main_cultivo.c.obj -c C:/Users/santy/esp/cultivo_smg/main/main_cultivo.c
C:/Users/santy/esp/cultivo_smg/main/main_cultivo.c: In function 'chipinfo':
C:/Users/santy/esp/cultivo_smg/main/main_cultivo.c:216:5: error: 'flash_size' is used uninitialized [-Werror=uninitialized]
  216 |     printf("%" PRIu32 "MB %s flash\n", flash_size / (uint32_t)(1024 * 1024),
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  217 |         (chip_info.features & CHIP_FEATURE_EMB_FLASH) ? "embedded" : "external");
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:/Users/santy/esp/cultivo_smg/main/main_cultivo.c:199:14: note: 'flash_size' was declared here
  199 |     uint32_t flash_size;
      |              ^~~~~~~~~~
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
